# SarthiAi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
apps/users/: admin.py  authentication.py  models.py  serializers.py  tasks.py  urls.py  vapi.py  views.py  webhooks.py
apps/users/migrations/: 0001_initial.py  0002_delete_user_create_userprofile.py  0003_relative_relativemedicine_medicineschedule.py  0004_medicineschedule_celery_task_id_and_more.py  0005_medicineschedule_escalation_call_id_and_more.py  0006_userprofile_last_logout_at.py  0007_relative_conditions_relative_phone_number.py
config/: celery.py  myloggerconfig.py  settings.py  urls.py
